--- a/stylesheets/login.css
+++ b/stylesheets/login.css
@@ -1,108 +1,53 @@
-.login_body{
-    margin: 0;
-    padding: 0;
-    background: #e7e7e7;
-    height:100vh;
-    overflow: hidden;
+body {
+    background: #262626;
 }
 
-.login_center{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    width: 400px;
-    height: 500px;
-    background: white;
-    border-radius: 10px;
+.logo {
+    display: block;
+    margin: auto;
+    padding: 100px 0px 50px 0px;
+    width: 30%;
 }
 
-.login_center h1{
-    text-align: center;
-    padding: 0 0 20px 0;
-    border-bottom: 1px solid silver;
+.wrapper 
+{
+    width: 350px;
+    background: #262626;
+    padding: 30px;
+    margin: auto;
 }
 
-.login_form{
-    padding: 0 40px;
-    box-sizing: border-box;
-}
-
-.login_form .txt_field{
-    position: relative;
-    border-bottom: 2px solid #adadad;
-    margin: 30px 0;
-}
-
-.txt_field input{
-    width: 100%;
-    padding: 0 5px;
+.wrapper .input-data 
+{
     height: 40px;
-    font-size: 16px;
-    border: none;
-    background: none;
-    outline: none;
-}
-
-.txt_field label{
-    position: absolute;
-    top: 50%;
-    left: 5px;
-    color: #adadad;
-    transform: translateY(-50%);
-    font-size: 16px;
-    pointer-events: none;
-    transition: .5s;
-}
-
-.txt_field span::before{
-    content: '';
-    position: absolute;
-    top: 40px;
-    left: 0;
-    width: 0%;
-    height: 2px;
-    background: #2691d9;
-    transition: .5s;
-}
-
-.txt_field input:focus ~ label,
-.txt_field input:valid ~ label{
-    top: -5px;
-    color: #2691d9;
-}
-
-.txt_field input:focus ~ span::before,
-.txt_field input:valid ~ span::before{
     width: 100%;
+    position: relative;
 }
 
-.pass{
-    margin: -5px 0 20px 5px;
-    color: #a6a6a6;
+.wrapper .input-data input{
+    border: none;
+    height: 100%;
+    width: 100%;
+    border-bottom: 2px solid #BEBEBE;
+    font-size: 20px;
+    background: #262626;
+    color: #BEBEBE;
+    outline: none;
+    text-align: center;
+}
+
+.login-btn input
+{
+    background-color: #474747;
+    font-size: 20px;
+    color: #BEBEBE;
+    padding: 5px 15px;
+    font-family: Product Sans;
+    border-radius: 6px;
     cursor: pointer;
-}
-
-.pass:hover{
-    text-decoration: underline;
-}
-
-.login_button{
-    margin-bottom: 20px;
-    margin-top: 50px;
-}
-
-
-.success-message {
-    text-align: center;
-    color: green;
-    font-size: 15px;
-    margin-bottom: -10px;
-}
-
-.error-message {
-    text-align: center;
-    color: red;
-    font-size: 15px;
-    margin-bottom: -10px;
+    box-shadow: 0px;
+    border:1px solid grey;
+    text-decoration: none;
+    outline: none;
+    margin-top: 30px;
 }
