--- a/stylesheets/sidebar.css
+++ b/stylesheets/sidebar.css
@@ -21,11 +21,15 @@ body{
 }
 
 .wrapper .sidebar{
-  width: 100%;
+  width: 235px;
   height: 100%;
   background: #262626;
   padding: 30px 0px;
-  position: relative;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  overflow-x: hidden;
 }
 
 .wrapper .sidebar h2{
