--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -23,10 +23,10 @@ body{
   margin-left: 30px;
 }
 
-
 .mainbody{
-  width: 100%;
-  margin: 0px;
+  width: 85%;
+  margin-left: 15%;
+  position: fixed;
 }
 
 .btn {
