--- a/stylesheets/inventory.css
+++ b/stylesheets/inventory.css
@@ -3,16 +3,41 @@ body span {
 }
 
 .itemtable{
-    width:80%;
-    border: 3px solid black;
+    width:60%;
+    font-size: 20px;
     margin-top: 50px;
+    border-collapse: collapse;
 }
 
 .itemtable th {
     text-align: left;
+    padding: 5px;
 }
 
 .itemtable td{
     padding-top: 6px;
     padding-bottom: 6px;
+}
+
+.quantity {
+    padding: 5px;
+}
+
+#itemfilter {
+    padding: 5px 5px 5px 5px;
+    width: 30%;
+    margin-top: 20px;
+}
+
+#locations{
+    padding: 5px 5px 5px 5px;
+    width: 10%;
+    background-color: #F5F5F5;
+    border-style: none;
+    outline: none;
+}
+
+#submitrecord{
+    margin-top: 40px;
+    width: 10%;
 }
