--- a/stylesheets/profile.css
+++ b/stylesheets/profile.css
@@ -78,6 +78,7 @@
     border-bottom: 2px solid black;
     font-size: 20px;
     font-weight: bold;
+    width: 80%;
 }
 
 .title 
@@ -94,4 +95,9 @@
 .content-right p
 {
     margin: 20px 0px;
+}
+
+.btn
+{
+    margin-left: 10px;
 }
