--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -20,7 +20,7 @@ body{
   margin: 3px;
   color: white;
   font-size: 20px;
-  margin-left: 30px;
+  margin-left: 15%;
   vertical-align: middle;
 }
 
