--- a/stylesheets/sidebar.css
+++ b/stylesheets/sidebar.css
@@ -13,14 +13,7 @@ body{
    background-color: #f3f5f9;
 }
 
-.wrapper{
-  display: flex;
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
-.wrapper .sidebar{
+.sidebar{
   width: 15%;
   height: 100%;
   background: #262626;
@@ -32,34 +25,34 @@ body{
   overflow-x: hidden;
 }
 
-.wrapper .sidebar h2{
+.sidebar h2{
   color: #fff;
   text-transform: uppercase;
   text-align: center;
   margin-bottom: 30px;
 }
 
-.wrapper .sidebar ul li{
+.sidebar ul li{
   padding: 15px;
   border-bottom: 1px solid #bdb8d7;
   border-bottom: 1px solid rgba(0,0,0,0.05);
   border-top: 1px solid rgba(255,255,255,0.05);
 }    
 
-.wrapper .sidebar ul li a{
+.sidebar ul li a{
   color: #bdb8d7;
   display: block;
 }
 
-.wrapper .sidebar ul li a .fas{
+.sidebar ul li a .fas{
   width: 25px;
 }
 
-.wrapper .sidebar ul li:hover{
+.sidebar ul li:hover{
   background-color: #594f8d;
 }
     
-.wrapper .sidebar ul li:hover a{
+.sidebar ul li:hover a{
   color: #fff;
 }
 
