--- a/stylesheets/profile.css
+++ b/stylesheets/profile.css
@@ -72,7 +72,7 @@
 
 }
 
-.about 
+.section 
 {
     margin: 30px 0px 20px 0px;
     border-bottom: 2px solid black;
@@ -100,4 +100,22 @@
 .btn
 {
     margin-left: 10px;
+}
+
+.leavetable 
+{
+    width: 75%;
+    text-align: left;
+    border-collapse: collapse;
+}
+
+.leavetable, .leavetable th, .leavetable td 
+{
+    border: 1px solid black;
+    padding: 7px;
+}
+
+.leavetable td 
+{
+    background-color: rgb(231, 231, 231);
 }
