--- a/stylesheets/viewleave.css
+++ b/stylesheets/viewleave.css
@@ -46,3 +46,91 @@ td {
     margin-top: 50px;
 }
 
+.modalBtn {
+    padding: 14px 20px;
+    margin: 8px 0px;
+    border: none;
+    cursor: pointer;
+    opacity: 0.9;
+    outline: none;
+    color: white;
+    background-color: black;
+    border: black solid;
+}
+  
+.modalBtn:hover {
+    background-color: white;
+    color: black;
+}
+
+/* Float cancel and delete buttons and add an equal width */
+#yesBtn, #noBtn {
+    width: 20%;
+}
+  
+.container {
+    padding: 16px;
+    text-align: center;
+}
+
+/* The Modal (background) */
+.modal {
+display: none; /* Hidden by default */
+position: fixed; /* Stay in place */
+z-index: 1; /* Sit on top */
+left: 0;
+top: 0;
+width: 100%; /* Full width */
+height: 100%; /* Full height */
+overflow: auto; /* Enable scroll if needed */
+background-color: rgba(255, 255, 255, 0.5);
+padding-top: 50px;
+}
+
+/* Modal Content/Box */
+.modal-content {
+background-color: #fefefe;
+margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+border: 1px solid #888;
+width: 30%; /* Could be more or less, depending on screen size */
+}
+
+/* Style the horizontal ruler */
+hr {
+border: 1px solid #f1f1f1;
+margin-bottom: 25px;
+}
+
+/* The Modal Close Button (x) */
+.close {
+position: absolute;
+right: 35px;
+top: 15px;
+font-size: 40px;
+font-weight: bold;
+color: #f1f1f1;
+}
+
+.close:hover,
+.close:focus {
+color: #f44336;
+cursor: pointer;
+}
+
+/* Clear floats */
+.clearfix::after {
+content: "";
+clear: both;
+display: table;
+}
+
+/* Change styles for cancel button and delete button on extra small screens */
+@media screen and (max-width: 300px) {
+.yesBtn, .noBtn {
+    width: 100%;
+}
+}
+
+.container h1 {
+    margin: 20px 0px;
+}
