--- a/stylesheets/viewstaff.css
+++ b/stylesheets/viewstaff.css
@@ -20,3 +20,18 @@
     margin-top: 50px;
     margin-left: 30px;
 }
+
+.searchbar{
+    padding: 8px 10px;
+    margin-top: 40px;
+    width: 30%;
+    border-radius: 5px;
+    outline: none;
+}
+
+#addstaff{
+    padding: 8px 10px;
+    margin-left: 10px;
+    border-radius: 5px;
+    outline-style: none;
+}
