--- a/stylesheets/sidebar.css
+++ b/stylesheets/sidebar.css
@@ -40,7 +40,7 @@ body{
 }    
 
 .sidebar ul li a{
-  color: #bdb8d7;
+  color: white;
   display: block;
 }
 
@@ -49,7 +49,7 @@ body{
 }
 
 .sidebar ul li:hover{
-  background-color: #594f8d;
+  background-color: grey;
 }
     
 .sidebar ul li:hover a{
