--- a/stylesheets/manageMenu.css
+++ b/stylesheets/manageMenu.css
@@ -13,6 +13,7 @@
 
 .tab:hover{
     cursor: pointer;
+    transition: all 0.3s;
 }
 
 #foodTab{
@@ -30,27 +31,71 @@
 
 .foodComponent {
     margin-top: 20px;
-    margin-right: 20px;
+    width: 550px;
+    height: 250px;
     border: black solid;
-    display: inline-block;
-    padding: 10px 10px;
+    display: flex;
+    float: left;
+    margin-right: 20px;
 }
 
 .foodImg {
-    display: inline-block;
     height: 200px;
     width: 200px;
-    padding-top: 10px;
+    margin: 25px 25px;
+    border: black solid;
+}
+
+.imageContainer {
+    flex: 1;    
 }
 
 .foodInfo {
-    display: inline-block;
-    vertical-align: top;
-    margin-top: 50px;
-    margin-left: 50px;
+    flex:1;     
+    display: flex;
+    flex-direction: column;
+    max-width: 250px;
 }
 
-button {
+.infoContainer {
+    flex: 2;
+}
+
+.infoText {
+    margin-top: 40px;   
+}
+
+.buttonContainer {
+    flex: 1;
+}
+
+#button {
+    margin-top: 25px;
+    margin-left: 150px;
+}
+
+.foodDesc {
+    overflow-wrap: break-word;
+}
+
+.addButton {
+    border-radius: 50%;
+    width: 55px;
+    height: 55px;
+    font-size: 30px;
     background: black;
     color: white;
+    position: fixed;
+    top: 85%;
+    left: 94%;
+    border: black solid;
+    outline: none;
+}
+
+.addButton:hover {
+    background: white;
+    border:black solid;
+    color: black;
+    transition: all 0.4s;
+    cursor: pointer;
 }
