--- a/stylesheets/history.css
+++ b/stylesheets/history.css
@@ -1,10 +1,20 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap"); */
 
-.mbody {
+/* .mbody {
   margin: 80px 30px 20px;
   font-family: "Montserrat", sans-serif;
+} */
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
+
 
 #small {
   margin: 30px;
