--- a/stylesheets/inventorymainpage.css
+++ b/stylesheets/inventorymainpage.css
@@ -1,14 +1,34 @@
 .daytable{
     text-align: left;
-    width: 60%;
-    margin-top: 30px;
+    width: 55%;
+    margin-top: 10px;
     font-size: 25px;
     vertical-align: middle;
     font-weight: bold;
+}
+
+.daytable td{
+    padding-top: 40px;
+}
+
+.btncolumn{
+    width: 30%;
+    text-align: center;
 }
 
 .createbtn{
     padding: 10px 20px;
     border: 3px solid black;
     border-radius: 8px;
+    cursor: pointer;
+    outline: none;
+}
+
+.created{
+    font-weight: normal;
+    font-size: 20px;
+}
+
+.fa-check{
+    color: green;
 }
