--- a/stylesheets/inventory.css
+++ b/stylesheets/inventory.css
@@ -17,10 +17,14 @@ body span {
 .itemtable td{
     padding-top: 6px;
     padding-bottom: 6px;
+    padding-left: 5px;
 }
 
 .quantity {
-    padding: 5px;
+    padding: 4px;
+    width: 90%;
+    font-size: 15px;
+    border-radius: 4px;
 }
 
 #itemfilter {
@@ -40,4 +44,10 @@ body span {
 #submitrecord{
     margin-top: 40px;
     width: 10%;
+}
+
+.topheader{
+    margin-top: 40px; 
+    margin-bottom: 20px;
+    font-size: 30px;
 }
