--- a/stylesheets/viewleave.css
+++ b/stylesheets/viewleave.css
@@ -1,35 +1,33 @@
-th {
+.leavetable th {
     border: 1px solid black;
     color: white;
     background-color: black;
 }
 
-th, td {
-    padding: 10px 50px;
+.leavetable th, td {
+    padding: 10px 20px;
     text-align: center;
 }
 
-td {
+.leavetable td {
     vertical-align: text-top;
-    width: 150px;
-    height: 60px;
+    background-color: rgb(214, 214, 214);
 }
 
 .btn {
     display: block;
     margin: 5px;
-    width: 100px;
+    width: 110px;
     height: 40px;
     border-radius: 20px;
     border: none;
     color: white;
     outline: none;
-    transition: all 0.5s;
+    transition: all 0.1s;
     font-size: 20px;
 }
 
 .btn:hover {
-    transform: scale(1.1);
     color: black;
     border: black solid;
 }
