Manage Menu Sidebar Fix

--- a/stylesheets/manageMenu.css
+++ b/stylesheets/manageMenu.css
@@ -3,6 +3,14 @@
     margin-left: 50px;
 }
 
+ol, ul {
+    padding-left: 0px;
+}
+
+.sidebar ul li {
+    padding: 0px;
+}
+
 .tab {
     display: inline-block;
     border: black solid;
@@ -10,9 +18,17 @@
     background: black;
     color: white;
 }
-
+a{text-decoration: none}
+a.btn {
+  text-decoration: none;
+}
+a:hover .btn-group { text-decoration: none }
+a .btn-group:hover { text-decoration: none }
+a:hover .btn-group .btn { text-decoration: none }
+a .btn-group .btn:hover { text-decoration: none }
 .tab:hover{
     cursor: pointer;
+
     transition: all 0.3s;
 }
 
