--- a/stylesheets/salesreport.css
+++ b/stylesheets/salesreport.css
@@ -1,3 +1,48 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+ol, ul {
+    padding-left: 0px;
+}
+
+.sidebar ul li {
+    padding: 0px;
+}
+
+.container {
+  margin: 50px auto;
+  max-width: 100%;
+  justify-content: center;
+}
+body > form > div.form-group > label {
+  overflow: hidden;
+  white-space: nowrap;
+  width: 180px;
+}
+
+body>div.sidebar>ul {
+    padding-left: 0;
+}
+
+a ,a:hover{
+    text-decoration: none;
+    font-size: 16px;
+}
+
+body > div.sidebar > ul > li{
+    height: 49.600px;
+}
+
+body > div.sidebar > ul > li> a{
+    height: 17.6px;
+}
+
+body > div.mainbody > div.topbar{
+    height:52px;
+}
+
 body {
   display:flex;
   font-family: "Lato", sans-serif;
