--- a/stylesheets/addstaff.css
+++ b/stylesheets/addstaff.css
@@ -10,13 +10,14 @@
 {
     font-size: 30px;
     font-weight: bold;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     border-bottom: 2px solid black;
 }
 
 .content 
 {
     display: flex;
+    margin-top: 20px;
 }
 
 .content-left 
@@ -49,4 +50,16 @@
     padding: 1px;
     margin-bottom: 20px;
     width: 35%
+}
+
+.success-message
+{
+    font-size: 20px;
+    color: green;
+}
+
+.error-message
+{
+    font-size: 20px;
+    color: red;
 }
