--- a/stylesheets/updateprofile.css
+++ b/stylesheets/updateprofile.css
@@ -10,13 +10,14 @@
 {
     font-size: 30px;
     font-weight: bold;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     border-bottom: 2px solid black;
 }
 
 .content 
 {
     display: flex;
+    margin-top: 20px;
 }
 
 .content-left 
