--- a/stylesheets/manageinventory.css
+++ b/stylesheets/manageinventory.css
@@ -40,3 +40,26 @@
     padding-bottom: 6px;
     padding-left: 5px;
 }
+
+.delbtn{
+    font-size: 15px;
+    padding: 5px 10px;
+    background-color: transparent;
+    border: 1px solid black;
+    border-radius: 3px;
+    width: 100%;
+    outline: none;
+}
+
+.delbtn:hover {
+    cursor: pointer;
+    background-color: black;
+    color: white;
+}
+
+.successmessage{
+    color: green;
+    margin-top: 20px;
+    font-weight: bold;
+    font-size: 16px;
+}
