--- a/stylesheets/inventoryrecords.css
+++ b/stylesheets/inventoryrecords.css
@@ -10,3 +10,58 @@
     width: 30%;
     text-align: center;
 }
+
+.invisible{
+    border: none;
+    position: fixed;
+    background-color: transparent;
+}
+
+.recordinfo {
+    text-align: left;
+    margin-left: 25%;
+    font-size: 22px;
+    margin-bottom: 25px;
+}
+
+.recordtitle{
+    font-size: 33px;
+    font-weight: bold;
+    margin: 60px 5px;
+}
+
+
+/*CODE TO STYLE THE ITEM TABLE*/
+
+.locationtitle{
+    margin-top: 50px;
+    font-size: 40px;
+    font-weight: bold;
+    transform: translate(-23%, 0);
+}
+
+.line{
+    background-color: black;
+    height: 3px;
+    border: none;
+    width: 62%;
+    margin-top: 10px;
+}
+
+.itemtable{
+    width:60%;
+    font-size: 20px;
+    margin-top: 30px;
+    border-collapse: collapse;
+}
+
+.itemtable th {
+    text-align: left;
+    padding: 5px;
+}
+
+.itemtable td{
+    padding-top: 6px;
+    padding-bottom: 6px;
+    padding-left: 5px;
+}
