--- a/stylesheets/printrecord.css
+++ b/stylesheets/printrecord.css
@@ -1,7 +1,5 @@
-.title{
-    font-size: 26px;
-    font-weight: bold;
-    margin: 25px 5px;
+.reportbody{
+    width: 100%;
 }
 
 .recordselect {
@@ -30,29 +28,6 @@
     margin: 60px 5px;
 }
 
-.printbtn {
-    background-color: black;
-    font-size: 20px;
-    color: white;
-    padding: 8px 10px;
-    font-family: Product Sans;
-    border-radius: 6px;
-    cursor: pointer;
-    box-shadow: 0px;
-    border:1px solid black;
-    transition: all 0.2s;
-    text-decoration: none;
-    outline: none;
-    margin: 60px 10px;
-    width: 15%;
-}
-
-.printbtn:hover{
-    background-color: white;
-    color:black;
-    border:1px solid black;
-}
-
 
 /*CODE TO STYLE THE ITEM TABLE*/
 
@@ -60,17 +35,15 @@
     margin-top: 50px;
     font-size: 40px;
     font-weight: bold;
-    margin-left: 22%;
+    margin-left: 18%;
     text-align: left;
-    /*transform: translate(-23%, 0); */
 }
 
 .line{
     background-color: black;
     height: 3px;
     border: none;
-    width: 62%;
-    margin-top: 10px;
+    width: 70%;
 }
 
 .itemtable{
