--- a/stylesheets/schedule.css
+++ b/stylesheets/schedule.css
@@ -3,8 +3,13 @@
     margin-top: 50px;
 }
 
+.btn {
+    width: 20%;
+    padding: 10px;
+}
+
 .timetable{
-    margin-top: 60px;
+    margin-top: 40px;
     font-size: 26px;
     border-collapse: collapse;
     text-align: center;
@@ -26,7 +31,7 @@
     padding-bottom: 20px;
 }
 
-.slot{
+.shift{
     margin-top: 20px;
     border-bottom: 2px solid black;
     text-align: left;
@@ -36,7 +41,7 @@
     margin: 2%;
 }
 
-.slot p{
+.shift p{
     margin-bottom: 5px;
 }
 
@@ -50,7 +55,7 @@
     cursor: pointer;
 }
 
-.removeslot{
+.removeshift{
     color: red;
     box-shadow: 0px;
     border-style: none;
@@ -59,7 +64,7 @@
     font-size: 15px;
 }
 
-.removeslot:hover{
+.removeshift:hover{
     cursor: pointer;
     text-decoration: underline;
 }
@@ -91,4 +96,102 @@
 
 .stafflist{
     background-color: black;
+}
+
+/* STYLING FOR MODALS */
+
+#modalwrapper{
+    background-color: black;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: 60%;
+    display: none;
+}
+
+#shiftmodal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -70%);
+    background-color: white;
+    width: 30%;
+    height: 46%;
+    opacity: 100%;
+    z-index: 2;
+    opacity: 1;
+    border-radius: 15px;
+    display: none;
+    text-align: left;
+}
+
+#staffmodal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    width: 50%;
+    height: 53%;
+    opacity: 100%;
+    z-index: 2;
+    opacity: 1;
+    border-radius: 15px;
+    display: none;
+}
+
+.modaltitle{
+    margin-top: 30px;
+    font-size: 26px;
+    font-weight:bolder;
+}
+
+.inputtext{
+    font-size: 20px;
+    border: 2px solid black;
+    border-radius: 5px;
+    padding: 8px 10px;
+    width: 60%;
+}
+
+.submitbutton{
+    margin-top: 25px;
+    margin-bottom: 20px;
+    background-color: black;
+    color: white;
+    font-weight: normal;
+    border: none;
+    font-size: 18px;
+    border-radius: 6px;
+    width: 30%;
+    height: 20%;
+    padding: 8px;
+    cursor: pointer;
+    border: 2px solid black;
+}
+
+.submitbutton:hover{
+    background-color: white;
+    color: black;
+}
+
+.formlabels{
+    font-size: 20px;
+    margin-right: 20px;
+}
+
+#shiftmodal select {
+    margin-top: 20px;
+}
+
+#shiftmodal .inputtime{
+    font-size: 20px;
+    border: 2px solid black;
+    border-radius: 5px;
+    padding: 5px 10px;
+    width: 60%;
+    margin-top: 20px;
 }
