--- a/stylesheets/Order.css
+++ b/stylesheets/Order.css
@@ -34,16 +34,15 @@ body {
 /* #container{
     position: relative;
   }
+  */
 
   #addd{
     margin-top: 1px;
     margin-right: 2px;
-    position:absolute;
-    top:0;
-    right:0;
-
-    
-} */
+    text-align: center;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 16px;
+} 
 
 #container {
   margin: auto;
@@ -76,3 +75,4 @@ td {
 #cancel {
   font-size: 18px;
 }
+
