--- a/stylesheets/viewstaff.css
+++ b/stylesheets/viewstaff.css
@@ -31,7 +31,7 @@
 
 #addstaff{
     padding: 8px 10px;
-    margin-left: 10px;
+    margin-top: 10px;
     border-radius: 10px;
     outline-style: none;
     cursor: pointer;
