--- a/stylesheets/manageMenu.css
+++ b/stylesheets/manageMenu.css
@@ -18,6 +18,7 @@
     transition: all 0.3s;
 }
 
+
 #foodTab{
     background: white;
     color: black;
@@ -88,9 +89,14 @@
     flex: 0 0 25%;
 }
 
+#editbutton {
+  margin-left: 110px;
+  font-family: 'Josefin Sans', sans-serif;
+}
 #button {
-    margin-top: 10px;
-    margin-left: 175px;
+  margin-top: -62px;
+    margin-left: 170px;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 .addButton {
