--- a/stylesheets/login.css
+++ b/stylesheets/login.css
@@ -51,3 +51,12 @@ body {
     outline: none;
     margin-top: 30px;
 }
+
+.login-btn {
+    margin-top: -30px;
+}
+
+.error-message {
+    color: red;
+
+}
